# CernoID-Complete-1

./: .coverage  .dockerignore  .env  .env.example  .env.prod.template  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.build  MANIFEST.in  README.md  Surveillance System.desktop  Surveillance System.xml  backup.sh  build.ps1  cerno_gui.py  create_files.ps1  create_shortcut.bat  create_shortcut.ps1  directory_structure.txt  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.new  environment.yml  individual_registration.py  install.py  installer.py  jest.config.ts  main.py  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  redis.conf  requirements.txt  restore.sh  (+14 more)
backend/: .bandit  .dockerignore  .env  .env.example  .pylintrc  Dockerfile  MANIFEST.in  README.md  alembic.ini  bandit-results.json  docker-entrypoint.sh  download_models.py  entrypoint.sh  health_check.sh  healthcheck.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test_db.py
backend/api/: api_routes.py
backend/api/authentication/: Login.py
backend/app/core/: config.py  secrets.py
backend/database/: database.py  test_db_connection.py
backend/database/database/: database.py  schema.sql
backend/database/migrations/: 20250308_add_last_login.py  b7d8c2ae8ef5_create_base.py  env.py  script.py.mako
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 1034977a6380_initial_migration.py  20240220_000000_initial.py  20250308_add_last_login.py  b7d8c2ae8ef5_create_base.py  d85c9ea0ca4f_initial_migration.py
backend/scripts/: download_models.py  init_admin.py  setup_env.py
backend/services/: automation.py
backend/src/: __init__.py  database.py  main.py  notifications.py  test_db.py
backend/src/api/: __init__.py  dependencies.py  documentation.py  main.py  mobile.py  routes.py  schemas.py  versioning.py
backend/src/api/endpoints/: security_doors.py
backend/src/api/middleware/: rate_limit.py  security.py
backend/src/api/mobile/: endpoints.py
backend/src/api/routes/: __init__.py  admin.py  auth.py  base.py  cameras.py  health.py  logs.py  persons.py  recognition.py  system.py  users.py
backend/src/api/schemas/: __init__.py  auth.py  common.py  logs.py  person.py  recognition.py  system.py
backend/src/api/websocket/: camera.py  websocket_server.js
backend/src/cernoid/: __init__.py  __main__.py  main.py
backend/src/cernoid_backend/: __init__.py  main.py
backend/src/cernoid_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/core/: __init__.py  base.py  camera.py  config.py  error_handling.py  logging.py  manager.py  models.py  processor.py  profiling.py  resource_pool.py  system.py
backend/src/core/access/: access_control.py  door_controller.py
backend/src/core/admin/: dashboard.py  manager.py
backend/src/core/alerts/: __init__.py  alert_manager.py  alert_manager.py.bak  notification_service.py  notifications.py
backend/src/core/analytics/: analyzer.py
backend/src/core/auth/: __init__.py  dependencies.py  manager.py  schemas.py  service.py
backend/src/core/balancer/: load_balancer.py
backend/src/core/camera/: coordinator.py  manager.py  processor.py  service.py
backend/src/core/circuit/: breaker.py
backend/src/core/cli/: commands.py
backend/src/core/config/: .env  .env.template  __init__.py  base.py  config.yaml  (+11 more)
backend/src/lib/: auth.ts  logger.ts  prisma.ts  websocket.tsx
backend/src/middleware/: auth.ts  rate-limit.ts
backend/src/services/: access_log.py  base.py  notification.py  recognition.py
backend/src/utils/: __init__.py  logging.py
backend/src/video_review/: __init__.py  incident_logger.py  video_browser_gui.py  video_player.py
backend/test-reports/: report.html
backend/tests/: conftest.py  requirements-test.txt  test_api.py  test_api_routes.py  test_auth.py  test_basic.py  test_face_recognition.py  test_migrations.py  test_minimal.py  test_models.py  test_persons.py  test_recognition.py  test_security.py  test_simple.py  test_system.py
backend/tests/data/: create_test_image.py
backend/tests/fixtures/: api_conftest.py  auth.py  database.py  db.py  env.py  face_recognition.py  face_recognition_conftest.py  mock_dlib.py  models.py  recognition.py  utils.py
backend/tests/test_api/: test_endpoints.py
backend/tests/test_core/: test_basic.py  test_models.py
(+1389 files in other folders)
