[tool.poetry]
name = "cernoid-backend"
version = "0.1.0"
description = "CernoID Backend Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "cernoid_backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.25"
alembic = "^1.15.2"
asyncpg = "^0.29.0"
python-jose = "^3.4.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.3.0"
aiofiles = "^23.2.1"
redis = "^5.2.1"
opencv-python-headless = "^4.11.0.86"
numpy = "^1.26.4"
scipy = "^1.15.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
face-recognition = "^1.3.0"
tkcalendar = "^1.6.1"
python-dotenv = "^1.1.0"
hvac = "^2.3.0"
prometheus-client = "^0.19.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pylint = "^3.3.6"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '/docs'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]
ignore = [] 